<resources>
    <!-- Change with your own App Name -->
    <string name="app_name">TPM SHP Plant</string>

    <!-- Don't change this line -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Default string, you may change here or programmatically inside the java -->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Version Preferences -->
    <string name="action_settings">Settings</string>
    <string name="menu_title_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="version_title">Version</string>
    <string name="menu_send">Send</string>
    <string name="version_summary" translatable="false">1.0.0</string>
    <string name="build_title" translatable="false">Build</string>
    <string name="update_summary">Tap here to check for updates</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    <string name="copyright_title">Copyright</string>

    <!-- Feedback Preferences -->
    <string name="feedback_title">Feedback</string>
    <string name="pattern_mailbody">\n\n-----------------------------\nPlease do not delete this section\nDevice OS: Android\nDevice OS version: {0}\nApp Version: {1} build {5}\nDevice Brand: {2}\nDevice Model: {3}\nDevice Manufacturer: {4}</string>
    <string name="feedback_body">Feedback for</string>
    <string name="choose_email_client">Choose mailing client</string>

    <!-- Preference Titles -->
    <string name="about_title">About</string>
    <string name="update_header">Update</string>
    <string name="help_header">Help</string>

    <!-- About Preferences -->
    <string name="about_summary">Asset Management System - AMS is an app for asset inventory or stock opname using RFID.\nDeveloped by NDU - System Control Plant\nVBN Future Industrial Technology.</string>

    <!-- Update Preferences -->
    <string name="update_title">Check for update</string>
    <string name="img_desc_logo_vbn" translatable="false">Logo VBN</string>

    <!-- Storage -->
    <string name="msg_storage_granted">Storage Granted</string>
    <string name="msg_storage_denied">Storage Denied</string>

    <!-- Menu -->
    <string name="action_search">Search</string>

    <!-- Message -->
    <string name="msg_importing_data_tpm">Importing data Info TPM…</string>
    <string name="msg_please_wait">Please wait!</string>
    <string name="msg_canceled">Canceled!</string>
    <string name="msg_import_complete">Import complete!</string>
    <string name="msg_no_xml_in_directory">No File.xml file in the directory</string>
    <string name="msg_import_failed">Import failed!</string>
    <string name="action_refresh">Refresh Data</string>
    <string name="img_desc_logo_thumbnail">Thumbnail Icon Info TPM</string>
    <string name="rv_title">Title</string>
    <string name="rv_article_id">Article ID: 231193</string>
    <string name="rv_description">Description</string>
    <string name="rv_author_name">Author: Nandur93</string>
    <string name="rv_publised_date">Published: 23–11–93</string>
    <string name="scan_config_header">Source Config</string>
    <string name="source_summary">Source of file</string>
    <string name="source_title">Source of file</string>
    <string name="toast_pick_file_error">Pick File Error</string>

    //PDFRenderer
    <string name="app_name_with_index">PdfRendererBasic (%1$d/%2$d)</string>
    <string name="intro_message">This sample demonstrates how to use PdfRenderer to display PDF documents on the screen.</string>
    <string name="info">Info</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="action_detail">Go to detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>